# micro-rustscript

./: .gitignore  Cargo.toml  README.md  partitions.csv  platformio.ini  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish-crates.yml  release-esp32.yml  release.yml
ci/: install-esp-idf-s31.sh  measure-size.sh  run-qemu-aarch64.sh
docs/: framework-api.md
esp32s31/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32s31/main/: CMakeLists.txt  main.cpp
examples/: repl.rs  run_file.rs
firmware/: host_framework.cpp  main.cpp  script_loader.cpp
firmware/arduino/: main.cpp
firmware/simulator/: arduino_sim.cpp
firmware/simulator/include/: Arduino.h
include/: rustscript_embedded.h  rustscript_framework.h  rustscript_loader.h
programs/: blinky.rss  esp32-blinky.rss  framework-api-smoke.rss  math.rss
programs/framework/: gpio.rss  i2c.rss  mcu.rss  serial.rss
scripts/: build_arduino.py  build_esp32s31.py  build_rust.py  flash_vmbc.py  merge_firmware.py  repl_rss.py  repl_vmbc.py  vmbc_image.py
src/: ffi.rs  lib.rs  repl_client.rs  repl_wire.rs
tests/: ffi.rs
