[package]
name = "rustscript-embedded"
version = "0.1.0"
edition = "2024"
description = "Embedded-facing RustScript runner examples with JIT disabled"
license = "MIT"
homepage = "https://rustscript.org/"
repository = "https://github.com/rustscript-lang/rustscript-embedded"

[dependencies]
vm = { package = "pd-vm", path = "../rustscript", version = "0.1.0", default-features = false, features = ["runtime"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.min-size]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
