[package]
name = "rustscript-embedded"
version = "0.1.0"
edition = "2024"
description = "Embedded RustScript VMBC runtime with a no_std host-function ABI"
license = "MIT"
homepage = "https://rustscript.org/"
repository = "https://github.com/rustscript-lang/micro-rustscript"

[lib]
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "rustscript-compile-vmbc"
path = "src/bin/rustscript-compile-vmbc.rs"
required-features = ["host"]

[[bin]]
name = "rustscript-serial-repl"
path = "src/bin/rustscript-serial-repl.rs"
required-features = ["host"]

[features]
default = ["host"]
host = ["dep:serialport", "dep:vm", "vm/runtime"]
esp32c3 = ["dep:pd_vm_nostd"]
esp32s31 = ["dep:pd_vm_nostd"]
arduino = ["dep:pd_vm_nostd"]
wifi = []
bluetooth = []

[dependencies]
pd_vm_nostd = { package = "pd-vm-nostd", git = "https://github.com/rustscript-lang/rustscript.git", rev = "5380c19", version = "0.1.0", optional = true }
serialport = { version = "4.8.1", default-features = false, optional = true }
vm = { package = "pd-vm", git = "https://github.com/rustscript-lang/rustscript.git", rev = "5380c19", version = "0.1.0", default-features = false, optional = true }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.min-size]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
